manifest/objects/Disclaimers__c.object
<CustomObject>
    <description>Standard Welcome Kit disclaimer language options.</description>
    <fields>
        <fullName>Disclaimer_Language__c</fullName>
        <description>Specific boilerplate language options related to Welcome Kit disclaimer</description>
        <inlineHelpText>Specific boilerplate language options related to Welcome Kit disclaimer</inlineHelpText>
        <label>Disclaimer Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Status__c</fullName>
        <description>This is the status of a disclaimer is still active or not to be used.</description>
        <inlineHelpText>This is the status of a disclaimer is still active or not to be used.</inlineHelpText>
        <label>Disclaimer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Plan_Boiler_Plate_Copy__c</fullName>
        <label>Health Plan Boiler Plate Copy</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Virtual_First_Health_Plan_Summary__c</fullName>
        <inlineHelpText>Client provided description of the virtual first health plan offering. Limit to 425 characters with spaces.</inlineHelpText>
        <label>&quot;Virtual First&quot; Health Plan Summary</label>
        <length>425</length>
        <type>LongTextArea</type>
    </fields>
    <label>Disclaimers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Disclaimer_Status__c</columns>
        <columns>NAME</columns>
        <columns>Disclaimer_Language__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BCBSNC</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>Disclaimer_Status__c</columns>
        <columns>NAME</columns>
        <columns>Disclaimer_Language__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>bcbsnc</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>STND</value>
        </filters>
        <label>BCBSNC</label>
    </listViews>
    <listViews>
        <fullName>Boiler_Plate</fullName>
        <columns>NAME</columns>
        <columns>Disclaimer_Status__c</columns>
        <columns>Health_Plan_Boiler_Plate_Copy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Disclaimers__c.Virtual_First_Boiler_Plate</value>
        </filters>
        <label>Boiler Plate</label>
    </listViews>
    <listViews>
        <fullName>Health_Plan_Summary</fullName>
        <columns>NAME</columns>
        <columns>Disclaimer_Status__c</columns>
        <columns>Virtual_First_Health_Plan_Summary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Health Plan Summary</label>
    </listViews>
    <listViews>
        <fullName>STND</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Disclaimer_Status__c</columns>
        <columns>NAME</columns>
        <columns>Disclaimer_Language__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>stnd</value>
        </filters>
        <label>STND</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclaimers</pluralLabel>
    <recordTypes>
        <fullName>Teladoc</fullName>
        <active>true</active>
        <description>For fields on Member Group Object (Disclaimer - Teladoc, Disclaimer - Client, Disclaimer - Custom)</description>
        <label>Disclaimer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_First_Boiler_Plate</fullName>
        <active>true</active>
        <description>For fields on Member Group Object (Health plan boiler plate copy)</description>
        <label>Virtual First Boiler Plate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_First_Summary</fullName>
        <active>true</active>
        <description>For fields on Member Group Object (&quot;Virtual First&quot; health plan summary)</description>
        <label>Virtual First Summary</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>